--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url=jdbc:h2:mem:managapi_db
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.use-new-id-generator-mappings=false 
