First version (working !)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
-spring.datasource.url=jdbc:h2:mem:managapi_db
+spring.datasource.url=jdbc:h2:~/management_api
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.use-new-id-generator-mappings=false 
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+#spring.jackson.serialization.fail-on-empty-beans=false
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLInnoDBDialect
